--- a/做题笔记.md
+++ b/做题笔记.md
@@ -24,3 +24,12 @@ for(var x=0;x<i;x++){
 
 PS: 做最短路径问题的时候，光是初始化邻接矩阵就花了好长时间。
 
+
+
+## 2.知识点： ’==‘ VS ‘===’
+
+```javascript
+console.log([] == ![]) // true
+console.log({} == !{}) // false
+```
+
