--- a/做题笔记.md
+++ b/做题笔记.md
@@ -72,3 +72,27 @@ https://blog.csdn.net/Libertied/article/details/108071583
   }
 ```
 
+
+
+## 7. Set 使用
+
+因为 `Set` 结构的值是唯一的，我们可以很轻松的实现以下
+
+```javascript
+// 数组去重
+let arr = [1, 1, 2, 3];
+let unique = [... new Set(arr)];
+
+let a = new Set([1, 2, 3]);
+let b = new Set([4, 3, 2]);
+  
+// 并集
+let union = [...new Set([...a, ...b])]; // [1,2,3,4]
+  
+// 交集
+let intersect = [...new Set([...a].filter(x => b.has(x)))];  // [2,3]
+  
+// 差集
+let difference = Array.from(new Set([...a].filter(x => !b.has(x)))); // [1]
+```
+
