--- a/做题笔记.md
+++ b/做题笔记.md
@@ -96,3 +96,48 @@ let intersect = [...new Set([...a].filter(x => b.has(x)))];  // [2,3]
 let difference = Array.from(new Set([...a].filter(x => !b.has(x)))); // [1]
 ```
 
+
+
+## 8.  `Number.prototype.toString()` \ `parseInt` 进制转换
+
+```javascript
+numObj.toString([radix])  
+// 指定要用于数字到字符串的转换的基数(从2到36)。如果未指定 radix 参数，则默认值为 10。
+```
+
+```javascript
+var count = 10;
+
+console.log(count.toString());    // 输出 '10'
+console.log((17).toString());     // 输出 '17'
+console.log((17.2).toString());   // 输出 '17.2'
+
+var x = 6;
+
+console.log(x.toString(2));       // 输出 '110'
+console.log((254).toString(16));  // 输出 'fe'
+
+console.log((-10).toString(2));   // 输出 '-1010'
+console.log((-0xff).toString(2)); // 输出 '-11111111'
+```
+
+**`parseInt(string, radix)`**  解析一个字符串并返回指定基数的十进制整数， `radix` 是2-36之间的整数，表示被解析字符串的基数。
+
+以下例子均返回`15`:
+
+```javascript
+parseInt("0xF", 16);
+parseInt("F", 16);
+parseInt("17", 8);
+parseInt(021, 8);
+parseInt("015", 10);   // parseInt(015, 8); 返回 13
+parseInt(15.99, 10);
+parseInt("15,123", 10);
+parseInt("FXX123", 16);
+parseInt("1111", 2);
+parseInt("15 * 3", 10);
+parseInt("15e2", 10);
+parseInt("15px", 10);
+parseInt("12", 13);
+```
+
