--- a/做题笔记.md
+++ b/做题笔记.md
@@ -141,3 +141,49 @@ parseInt("15px", 10);
 parseInt("12", 13);
 ```
 
+
+
+## 9.使用 `Number` 转换数字字符串为数字
+
+```javascript
+Number('123')     // 123
+Number('12.3')    // 12.3
+Number('12.00')   // 12
+Number('123e-1')  // 12.3
+Number('')        // 0
+Number(null)      // 0
+Number('0x11')    // 17
+Number('0b11')    // 3
+Number('0o11')    // 9
+Number('foo')     // NaN 
+Number('100a')    // NaN 需要注意，只能是单纯数字的字符串
+Number('-Infinity') //-Infinity
+```
+
+
+
+## 10. `map` 方法会给原数组中的每个元素都按顺序调用一次  `callback` 函数。
+
+`callback` 函数会被自动传入三个参数：数组元素，元素索引，原数组本身。
+
+```javascript
+parseInt(string, radix)
+```
+
+所以以下调用就成了：parseInt(数组元素,元素索引)
+
+```javascript
+[1,2,3,4].map(parseInt)  // [ 1, NaN, NaN, NaN ]
+// 即为：
+parseInt(1,0) // 传入 0 的时候注意
+parseInt(2,1) 
+parseInt(3,2)  // 二进制怎么可能会出现3呢！所以NaN
+parseInt(4,3)
+```
+
+如果 `radix` 是 `undefined`、`0`或未指定的，JavaScript会假定以下情况：
+
+1. 如果输入的 `string`以 "`0x`"或 "`0x`"（一个0，后面是小写或大写的X）开头，那么radix被假定为16，字符串的其余部分被当做十六进制数去解析。
+2. 如果输入的 `string`以 "`0`"（0）开头， `radix`被假定为`8`（八进制）或`10`（十进制）。具体选择哪一个radix取决于实现。ECMAScript 5 澄清了应该使用 10 (十进制)，但不是所有的浏览器都支持。**因此，在使用 `parseInt` 时，一定要指定一个 radix**。
+3. 如果输入的 `string` 以任何其他值开头， `radix` 是 `10` (十进制)。
+
