整理笔试题

--- a/做题笔记.md
+++ b/做题笔记.md
@@ -187,3 +187,11 @@ parseInt(4,3)
 2. 如果输入的 `string`以 "`0`"（0）开头， `radix`被假定为`8`（八进制）或`10`（十进制）。具体选择哪一个radix取决于实现。ECMAScript 5 澄清了应该使用 10 (十进制)，但不是所有的浏览器都支持。**因此，在使用 `parseInt` 时，一定要指定一个 radix**。
 3. 如果输入的 `string` 以任何其他值开头， `radix` 是 `10` (十进制)。
 
+
+
+## 11. 二分查找注意事项 mid 取值
+
+js二分查找的时候需要取整，毕竟没有整型数据类型。 `let mid = left + parseInt((right - left) / 2)` 或者用`Math.floor`
+
+做：LeetCode 410 
+
