--- a/做题笔记.md
+++ b/做题笔记.md
@@ -195,3 +195,27 @@ js二分查找的时候需要取整，毕竟没有整型数据类型。 `let mid
 
 做：LeetCode 410 
 
+
+
+## 12. 整数转换为 32 位二进制表示（ JZ11-二进制中1的个数.js ）
+
+JavaScript 将数字存储为 64 位浮点数，但所有按位运算都以 32 位二进制数执行。
+
+在执行位运算之前，JavaScript 将数字转换为 32 位有符号整数。
+
+**1. 把十进制转换为二进制**
+
+```javascript
+function dec2bin(dec){
+    return (dec >>> 0).toString(2);
+}
+```
+
+**2. 把二进制转换为十进制**
+
+```javascript
+function bin2dec(bin){
+    return parseInt(bin, 2).toString(10);
+}
+```
+
