--- a/做题笔记.md
+++ b/做题笔记.md
@@ -219,3 +219,42 @@ function bin2dec(bin){
 }
 ```
 
+
+
+## 13.写出一个正则来处理数字千分位
+
+```javascript
+let b = a.toFixed(2).replace(/(\d)(?=(\d{3})+\.)/g, '$1,');
+```
+
+
+
+## 14.做树相关题目的注意事项
+
+要养成一个习惯，对**任何一个树节点**进行访问时，一定要提前检测该节点**是否为空**
+
+
+
+## 15. `Array.prototype.fill()`
+
+`fill()` 方法用一个固定值填充一个数组中从起始索引到终止索引内的全部元素。不包括终止索引。
+
+```javascript
+[1, 2, 3].fill(4);               // [4, 4, 4]
+[1, 2, 3].fill(4, 1);            // [1, 4, 4]
+[1, 2, 3].fill(4, 1, 2);         // [1, 4, 3]
+[1, 2, 3].fill(4, 1, 1);         // [1, 2, 3]
+[1, 2, 3].fill(4, 3, 3);         // [1, 2, 3]
+[1, 2, 3].fill(4, -3, -2);       // [4, 2, 3]
+[1, 2, 3].fill(4, NaN, NaN);     // [1, 2, 3]
+[1, 2, 3].fill(4, 3, 5);         // [1, 2, 3]
+Array(3).fill(4);                // [4, 4, 4]
+[].fill.call({ length: 3 }, 4);  // {0: 4, 1: 4, 2: 4, length: 3}
+
+// Objects by reference.
+var arr = Array(3).fill({}) // [{}, {}, {}];
+// 需要注意如果fill的参数为引用类型，会导致都执行都一个引用类型
+// 如 arr[0] === arr[1] 为true
+arr[0].hi = "hi"; // [{ hi: "hi" }, { hi: "hi" }, { hi: "hi" }]
+```
+
