数组去重不简单

--- a/做题笔记.md
+++ b/做题笔记.md
@@ -258,3 +258,22 @@ var arr = Array(3).fill({}) // [{}, {}, {}];
 arr[0].hi = "hi"; // [{ hi: "hi" }, { hi: "hi" }, { hi: "hi" }]
 ```
 
+
+
+## 16. NaN !== NaN , {} === {}
+
+**indexOf** 底层还是使用 === 进行判断，因为 NaN === NaN的结果为 false，所以使用 indexOf 查找不到 NaN 元素
+
+```javascript
+let a = {};
+a === a; // true
+let b = {};
+b === a; // false
+
+let b = NaN;
+b === b; // false
+
+// JavaScript专题之数组去重
+// https://github.com/mqyqingfeng/Blog/issues/27
+```
+
