--- a/myInterview/酷家乐一面20210329.md
+++ b/myInterview/酷家乐一面20210329.md
@@ -15,23 +15,84 @@
 ## 面试复盘：
 
 1. 页面加载时，**script 脚本的加载顺序**是怎么样的？回答了依次从上到下，问有无其他情况？
+
 2. **盒模型**，区别？
+
 3. **position** 属性值，分别代表什么意思？
+
 4. **两栏布局**，左侧固定，右侧自适应
+
 5. **BFC**
+
 6. **清除浮动**方法
+
 7. **语义化标签**是什么意思？
+
 8. script 脚本一般放在什么位置，为什么？
+
 9. JS **基本数据类型**
+
 10. **类型判断**，怎么判断是否为数组？
+
+    1、instanceof方法
+    instanceof 运算符是用来测试一个对象是否在其原型链原型构造函数的属性
+
+    ```javascript
+    var arr = []; 
+    arr instanceof Array; // true
+    ```
+
+    2、constructor方法
+    constructor属性返回对创建此对象的数组函数的引用，就是返回对象相对应的构造函数
+
+    ```javascript
+    var arr = []; 
+    arr.constructor == Array; //true
+    ```
+
+    3、最简单的方法，这种写法兼容性最好使用Object.prototype.toString.call()
+
+    ```javascript
+    function isObjArr(value){
+         if (Object.prototype.toString.call(value) === "[object Array]") {
+                console.log('value是数组');
+           }else if(Object.prototype.toString.call(value)==='[object Object]'){//这个方法兼容性好一点
+                console.log('value是对象');
+          }else{
+              console.log('value不是数组也不是对象')
+          }
+    }
+    ```
+
+    4、ES5新增方法isArray()
+
+    ```javascript
+    var a = new Array(123);
+    var b = new Date();
+    console.log(Array.isArray(a)); //true
+    console.log(Array.isArray(b)); //false
+    ```
+
+    ps：千万不能使用typeof来判断对象和数组，因为这两种类型都会返回"object"。
+
+    
+
 11. **原型链**，每个对象都有原型链吗，原型链是怎么形成的？原型链末端？
+
 12. **new** 操作，为什么实例能继承属性？子类访问到构造函数属性值，改变属性值原型会变吗？
+
 13. function Ａ 里面声明 function Ｂ，function Ｂ 里面能访问到 Ａ 里面定义的变量吗？为什么？
+
 14. ES6 **let const var** 之间的区别？
+
 15. **map** 与 Object 之间的区别？
+
 16. **浏览器存储**，区别？
+
 17. 平时数据结构用得多吗？**判断链表是否存在环？**
+
 18. **Vue，JQuery 与原生 JS** 区别？对比、优缺点？
+
 19. 反问，面试官说可以介绍一下他没问到的自己的一些强项、特点……
 
 
