--- a/做题笔记.md
+++ b/做题笔记.md
@@ -277,3 +277,130 @@ b === b; // false
 // https://github.com/mqyqingfeng/Blog/issues/27
 ```
 
+
+
+## 17.数组去重
+
+**数组中含有对象**的时候，去重的方法就基本不能用了。
+
+小小去重也是真不容易啊
+
+参见文章：
+
+https://github.com/mqyqingfeng/Blog/issues/27
+
+```javascript
+// 最为全面的方法
+function unique(array) {
+    var obj = {};
+    return array.filter(function(item, index, array) {
+        // console.log(typeof item + JSON.stringify(item))
+        return obj.hasOwnProperty(typeof item + JSON.stringify(item)) ? false : (obj[typeof item + JSON.stringify(item)] = true)
+    })
+}
+
+let arr = [true, false, null, undefined, NaN, 0, 1, {}, {}, 'a', 'a', NaN];
+console.log(unique(arr));
+
+// JSON.stringify({})   {}
+// JSON.stringify(/a/) 正则表达式的话也是 {}
+var array = [{}, {}, /a/, /a/];
+// 结果 [ {} ]
+
+// 为了解决这个特别的情况，自己改写了一下。。。。
+function unique(array) {
+    var obj = {};
+    return array.filter(function(item, index, array) {
+        if (JSON.stringify(item) === '{}') {
+            return obj.hasOwnProperty(typeof item + JSON.stringify(item) + item.toString()) ? false : (obj[typeof item + JSON.stringify(item) + item.toString()] = true)
+        } else {
+            console.log(typeof item + JSON.stringify(item));
+            return obj.hasOwnProperty(typeof item + JSON.stringify(item)) ? false : (obj[typeof item + JSON.stringify(item)] = true)
+        }
+    })
+}
+```
+
+整理了一个列表，我们重点关注下对象和 NaN 的去重情况：
+
+| 方法               | 结果                                                         | 说明                              |
+| ------------------ | ------------------------------------------------------------ | --------------------------------- |
+| for循环            | [1, "1", null, undefined, String, String, /a/, /a/, NaN, NaN] | 对象和 NaN 不去重                 |
+| indexOf            | [1, "1", null, undefined, String, String, /a/, /a/, NaN, NaN] | 对象和 NaN 不去重                 |
+| sort               | [/a/, /a/, "1", 1, String, 1, String, NaN, NaN, null, undefined] | 对象和 NaN 不去重 数字 1 也不去重 |
+| filter + indexOf   | [1, "1", null, undefined, String, String, /a/, /a/]          | 对象不去重 NaN 会被忽略掉         |
+| filter + sort      | [/a/, /a/, "1", 1, String, 1, String, NaN, NaN, null, undefined] | 对象和 NaN 不去重 数字 1 不去重   |
+| 优化后的键值对方法 | [1, "1", null, undefined, String, /a/, NaN]                  | 全部去重                          |
+| Set                | [1, "1", null, undefined, String, String, /a/, /a/, NaN]     | 对象不去重 NaN 去重               |
+
+想了解为什么会出现以上的结果，看两个 demo 便能明白：
+
+```javascript
+// demo1
+var arr = [1, 2, NaN];
+arr.indexOf(NaN); // -1
+```
+
+`indexOf` 底层还是使用 === 进行判断，因为 `NaN === NaN`的结果为 false，所以使用 `indexOf` 查找不到 NaN 元素
+
+```javascript
+// demo2
+function unique(array) {
+   return Array.from(new Set(array));
+}
+console.log(unique([NaN, NaN])) // [NaN]
+```
+
+Set 认为尽管 `NaN === NaN` 为 false，但是这两个元素是重复的。
+
+## 18. sort 函数自定义比较函数
+
+```
+arr.sort([compareFunction])
+```
+
+`compareFunction` 可选
+
+用来指定按某种顺序进行排列的函数。如果省略，元素按照转换为的字符串的各个字符的Unicode位点进行排序。
+
+- `firstEl`
+
+  第一个用于比较的元素。
+
+- `secondEl`
+
+  第二个用于比较的元素。
+
+如果指明了 `compareFunction` ，那么数组会按照调用该函数的返回值排序。即 a 和 b 是两个将要被比较的元素：
+
+- 如果 `compareFunction(a, b)` 小于 0 ，那么 a 会被排列到 b 之前；
+
+- 如果 `compareFunction(a, b)` 等于 0 ， a 和 b 的相对位置不变。备注： ECMAScript 标准并不保证这一行为，而且也不是所有浏览器都会遵守（例如 Mozilla 在 2003 年之前的版本）；
+
+- 如果 `compareFunction(a, b)` 大于 0 ， b 会被排列到 a 之前。
+- `compareFunction(a, b)` 必须总是对相同的输入返回相同的比较结果，否则排序的结果将是不确定的。
+
+```javascript
+// 剑指offer-把数组排成最小的数
+/* 
+解题思路:
+根据题目的要求,两个把数组排成最小的数能拼接成数字 mn 和 nm
+如果 mn < nm, 那么我们应该打印出 mn, 也就是 m 应该排在 n 的前面,
+我们定义此时 m 小于 n; 反之,则 n 小于 m 
+由于把 m 和n 拼接起来得到 mn 和 nm,它们的位数一定是相同的,
+因此比较它们的大小只需要按照字符串大小的比较规则就可以了. 
+*/
+function PrintMinNumber(numbers) {
+    // 注意 返回值 是字符串
+    let res = numbers.sort(compare);
+
+    // 定义比较规则: 
+    function compare(num1, num2) {
+        if ('' + num1 + num2 < '' + num2 + num1) {
+            return -1;
+        }
+    }
+    return res.join('');
+}
+```
+
